# card-validator

./: README.md  sample.py
card-validator/: pyproject.toml
card-validator/src/card_validator/: main.py
card-validator/src/card_validator/templates/: index.html
