[project]
name = "card-validator"
version = "0.1.0"
description = ""
authors = [
    {name = "nish",email = "nishchup489@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-multipart (>=0.0.24,<0.0.25)",
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.poetry]
packages = [{include = "card_validator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
